sass/layout.sass
@import "iconmoon.css"
@import "hint.min.css"
@import base
@import text

$border-color: #ddd

// basic

*
  padding: 0
  margin: 0

body
  font: 1.2125em/1.57 "iABC Regular", Georgia, serif
  color: $black
  font-weight: normal
  font-variant: normal
  font-style: normal
  background-color: #fefefe
  text-rendering: optimizeLegibility

a, a:active, a:visited
  color: $black

=link-no-decoration()
  a, a:active, a:visited
    text-decoration: none

=link-decoration-underline()
  a, a:active, a:visited
    text-decoration: underline

a:hover, a:visited:hover
  color: #cc0000
    text-decoration: underline

// sidebar + main layout
.container
  width: 100%
  height: 100%
  margin: 0 auto

.side
  position: fixed
  top: 0
  left: 0
  bottom: 0
  width: 22%
  float: left
  height: 100%
  padding: 2em
  display: block
  +box-sizing()

.main
  position: relative
  width: 78%
  float: right
  padding: 2em 3em
  display: block
  z-index: 999
  +box-sizing()

.clear
  clear: both

// side
.side
  text-align: left
  +link-no-decoration()
  word-break: break-all
  text-align: center
  border-right: .1em solid $border-color
  // author
  .author
    +ofl-font()
    .author-name
      font-size: 1.7em
      margin-top: 1em
    .author-description
      text-align: left
    .avatar img
      width: 65%
      height: 65%
      +border-radius(100em)
  // social
  .side .social
    padding: .7em 0
    a
      font-size: 1.1em
      display: inline
      margin: 0 .1em

// main
.main
  .meta
    +link-no-decoration()
    +ofl-font()
    text-align: center
    padding-bottom: 1em
    h2
      font-style: italic
      font-size: 20px
      margin-top: .5em
    h1, h2
      font-weight: 200
  .posts
    +link-no-decoration()
    .item
      +ofl-font()
      font-size: 1.2em
      border-bottom: 1px solid $border-color
      padding: 1em 0 .3em 0
      span.date
        font-style: italic
        font-size: .8em
        float: right
  .paging
    +link-no-decoration()
    width: 100%
    margin: 1em 0
    line-height: 1.0
    font-size: 1.5em
    display: inline-block
    a
      display: block
      width: 50%
    a.prev
      float: left
      text-align: left
    a.next
      float: right
      text-align: right

  .post
    h1.title
      +ofl-font()
      padding-top: .5em
      text-align: center
    p.date
      +ofl-font()
      text-align: center
      font-style: italic
      text-indent: .1em
    .post-body
      padding: 2em 0 1.5em 0
    // img in content
    img.title-pic
      width: 100%
    p img, a img.title-pic
      margin: 1em auto
      display: block
    a img.title-pic
      margin: 0 0 1em 0

  div.posts-nav
    +link-no-decoration()
    width: 100%
    display: inline-block
    border-top: 1px solid $border-color
    border-bottom: 1px solid $border-color
    margin: 1em 0
    a.next, a.prev
      color: black
      padding: 1em 0
      font-size: 20px
      display: block
      width: 50%
      [class^="icon-"]:before, [class*=" icon-"]:before
        margin-right: .5em
        margin-left: .5em

    a.prev
      float: left
      text-align: left
    a.next
      float: right
      text-align: right
    a:hover
      text-decoration: none
    a.next:hover, a.prev:hover
      background-color: rgba(0,0,0,.07)

  .symbol
    font-family: "iABC SC Regular", Georgia, serif
    font-size: 3.33333em
    line-height: 1
    -webkit-font-smoothing: antialiased  // smooth
    text-align: center
    display: block

  #disqus_thread
    padding-top: 1em

  .footer
    font-size: .8em
    text-align: center
    padding: 1.5em 0 .5em 0

